--- a/05sorteringogsoking.tex
+++ b/05sorteringogsoking.tex
@@ -5,10 +5,10 @@ Sortering er en av de viktigste operasjonene man har, og det brukes også mye so
 
 \subsubsection{Stabilitet}
 
-\subsubsection{Sammenligningsbaserte sorteringsalgoritmer}
-Dette er en av to grupper sortering. Felles i denne gruppen er at soteringen skjer ved sammenligning av to elementer. De fleste av disse metodene klarer seg med å jobbe direkte i den originale inputlisten (altså at de ikke trenger å opprette nye, midlertidige lister), og disse sies å være "in place" sorteringsalgoritmer.\\
+\subsection{Sammenligningsbaserte sorteringsalgoritmer}
+Dette er en av to grupper sortering. Felles i denne gruppen er at soteringen skjer ved sammenligning av to elementer. De fleste av disse metodene klarer seg med å jobbe direkte i den originale inputlisten (altså at de ikke trenger å opprette nye, midlertidige lister), og disse sies å være "in place" sorteringsalgoritmer.
 
-\noindent \textbf{Bubblesort}\\
+\subsubsection{Bubblesort}
 Dette kan sies å være den enkleste og mest naive av alle sorteringsalgoritmer. Bubblesort tester to og to naboelementer, og dersom den finner at det første elementet er større enn det neste bytter de plass. Effektiv på små datamengder. Denne algoritmen bruker sammenligning, og skjer "in place".
 
 \begin{figure}[H]
@@ -34,7 +34,7 @@ Gitt tallfølgen 6, 5, 3, 1, 8, 7, 2 4. Vil sorteres slik at etter en runde vil 
 
 \noindent Kjøretiden til Bubblesort er \textbf{$\theta(n^2$} for både gjennomsnittlig og verste tilfelle. Det er ikke så vanskelig å se for seg. Hvert eneste element kan risikere å måtte flytte seg opptil $n$ plasser under sorteringen. Boblesortering er effektiv på veldig små mengder.\\
 
-\noindent \textbf{Insertion sort}\\
+\subsubsection{Insertion sort}
 Denne sorteringen er nok den mest intuitive av dem alle, og foregår "in place". Den tar utgangspunkt i det første elementet, og sjekker så element nummer to. Deretter settes de slik at de er sortert i forhold til hverandre. Så tar den tredje element of ser hvor dette skal plasseres i forhold til de to første. Slik fortsetter det. Når $i - 1$ elementer er ferdig sortert og det $i$'te kommer, er det riktig plass i rekken for element nummer $i$ – etter at det er satt på plass, har vi $i$ sorterte elementer, og vi kan gå videre med element $i + 1$. Dette er den måten de aller fleste sorterer en korthånd på. Insertion sort er, i likhet med bubblesort, også meget effektiv på små datamengder. 
 \\\\
 Kjøretiden her er også \textbf{$\theta(n^2)$} både for gjennomsnittlig kjøretid og i verste tilfelle. Men i praksis er den ofte bedre en bubblesort. Et veldig viktig poeng er: hvis du har en hel del elementer som nesten er sortert ferdig, er denne metoden helt suveren (på slutten av quicksort f.eks.). 
@@ -62,7 +62,7 @@ Kjøretiden her er også \textbf{$\theta(n^2)$} både for gjennomsnittlig kjøre
 Gitt tallrekken 6, 5, 3, 1, 8, 7, 2, 4. Begynner med 6, som er første tall. Ser så på 5. 5 er mindre enn 6, og flyttes til plass null. Rekken ser da slik ut: 5, 6, 3, 1, 8, 7, 2, 4. Ser så på plass nummer to, tallet 3. Det er mindre enn både 5 og 6, og flyttes først. Tallrekken er da: 3, 5, 6, 1, 8, 7, 2, 4. Plass tre er 1. Det er minst av alle, og settes ført. Da er tallrekken: 1, 3, 5, 6, 8, 7, 2, 4. Plass nummer fire er tallet 8. Det er større enn alle tidligere tall, og blir stående. Plass fem er 7. Det er mindre enn 8 og flyttes til plass fire: 1, 3, 5, 6, 7, 8, 2, 4. Plass seks er 2, som er mindre enn nesten alle. Flyttes til plass en, og tallrekken blir: 1, 2, 3, 5, 6, 7, 8, 4. Da er det bare 4 igjen, som er mindre enn mange av tallene, og plasseres rett i plass tre. Da er tallfølgen ferdig sortert: 1, 2, 3, 4, 5, 6, 7, 8.
 \end{boxed}
 
-\noindent \textbf{Merge sort}\\
+\subsubsection{Merge sort}
 Nå kommer en sortering som er bedre enn de to foregående (så sant størrelsen på inn-data ike er meget liten!). I flettesortering deles problemet opp i stadig mindre biter, og når bitene er tilstrekkelig små, er det lett å sortere dem hver for seg.
 \\\\
 Tenk for eksempel at du deler input-verdiene i to like deler (om du har et oddetall av elementer, vil den ene delen bare bli en større en den andre). Deretter fortsetter du, med hver del for seg, til du har kun to eller tre verdier i hver lille del. Disse er lette å sortere (f.eks. ved å bruke metoden til boblesortering!) hver for seg. Når dette er gjort, tar man for seg to og to deler. Disse flettes sammen ganske enkelt ved å se på den minste verdien i hver av de to nye delene/bunkene, og skille ut den minste av dem. Så gjentar man prosedyren med de elementene som er igjen og ender med en større del sorterte elementer. Slik fortsetter det til alt er sortert.
@@ -131,7 +131,7 @@ Gitt tallfølgen 6, 5, 3, 1, 8, 7, 2, 4. Tallene deles opp i to grupper, 6, 5, 3
 \end{figure}
 \end{boxed}
 
-\noindent \textbf{Heapsort}\\
+\subsubsection{Heapsort}
 Her benytter vi oss igjen av deling av problemet slik at vi oppnår en god kjøretid. Heapsort er nok et eksempel på en sortering "in place".
 \\\\
 1. steg er bygging av heap. Dette består av å lage en såkalt "haug" av elementene først. En haug (eller en "heap") er et eksempel på en datastruktur. Det foregår slik at du setter elementene i et tre slik at ethvert element er det største av alle som er under det. Se figur \ref{fig:heapsort}. Dette innebærer blant annet at det øverste elementet er det største av alle de som er der. Algoritmen for å bygge opp en heap av en usortert liste med tall er nærmere forklart i kapittel 6.2 og 6.3 i Cormen, og går i korthet ut på at vi går gjennom alle indre noder og dytter dem nedover så langt som nødvendig. Noe som også lønner seg å få med seg fra boken er hvordan man kan lagre en heap direkte i et array i stedet for å lage en vanlig trestruktur.
@@ -163,7 +163,7 @@ Her benytter vi oss igjen av deling av problemet slik at vi oppnår en god kjør
         end for
 \end{lstlisting}
 
-\noindent \textbf{Quicksort}\\
+\subsubsection{Quicksort}\\
 Quicksort er en av de desidert mest populære sorteringene i bruk. Den bruker, som flettesortering, en form for \textit{splitt og hersk}-metode. Denne algoritmen kan deles i tre trinn:
 \\\\
 \textit{Partisjonér:} Velg ut et element i mengden du vil sortere. La oss kalle dette \textbf{pivotelementet} for $a$. Så deler vi mengden i to mindre mengder slik at alle elementer mindre eller lik $a$ danner den ene mengden, mens resten (som da er større enn $a$) danner den andre mengden.
@@ -228,10 +228,10 @@ Gitt at vi klarer å velge elementet $a$ slik at den deler mengden i to nesten h
     end function
 \end{lstlisting}
 
-\subsubsection{Sortering i lineær tid}
-Hvis man kjenner til en del egenskaper ved mengden man skal sortere på forhånd kan man senke kjøretiden betraktelig.\\
+\subsection{Sortering i lineær tid}
+Hvis man kjenner til en del egenskaper ved mengden man skal sortere på forhånd kan man senke kjøretiden betraktelig.
 
-\noindent \textbf{Counting sort}\\
+\subsubsection{Counting sort}
 Anta at vi har en mengde men $n$ heltall med verdier fra 0 til $k$. Da kan vi rett og slett lage oss en liste fra 0 til $k$, og så setter vi hvert element inn på sin plass i listen. Sorteringen faller dermed ut av seg selv.
 
 \begin{boxed}
@@ -287,7 +287,7 @@ Gitt A = [3, 3, 1, 4, 4, 3, 1, 2, 3, 5]. Hvordan ser C[0...6] ut idet Counting-S
 [0, 0, 2, 3, 7, 9, 10] \newline\newline  Tellesortering teller først forekomster, gjør så tellingene kumulative, og så dekrementerer disse under innsetting. Så tellingene til slutt tilsvarer altså hvor mange som er strengt mindre. F.eks. vil C[3] hvor mange verdier som er mindre enn 3. Her gis også enkelte andre svar noe uttelling.
 \end{boxed}
 
-\noindent \textbf{Radix sort}\\
+\subsubsection{Radix sort}\\
 Når man skal sortere en mengde heltall (f.eks. i det vanlige titallsystemet) kan det være et smart triks å først sortere etter det mest signifikante sifferet (altså sifferet lengst til venstre), deretter det nest mest signifikante osv. til man er i mål. Det som ikke er så gunstig med dette er at når man er ferdig med å sortere på det første sifferet har man fått ti grupper som må sorteres videre hver for seg. Etter at hver av disse er sortert på det andre sifferet har man hundre grupper, og dette er det strevsomt å holde styr på.
 \\\\
 Radix-sortering bruker en lignende idé som er enda smartere. Du vil se at hvis man først sorterer etter det minst signifikante sifferet, vil man få sortert alle tallene uten det lille problemet som oppstår ve då ta fatt i det mest signifikante sifferet. For at dette skal fungere er det meget viktig at man bruker en stabil sorteringsalgoritme for å sortere på hvert siffer. Grunnen til dette er at når man sorterer på f.eks. sifferet nest lengst til høyre og støter på to tall med samme siffer på den plassen vil de to tallene beholde den innbyrdes rekkefølgen de hadde.
@@ -311,8 +311,8 @@ Det er viktig at man bruker en lineær sorteringsalgoritme (som f.eks. tellesort
     end function
 \end{lstlisting}
 
-\noindent \textbf{Bucketsort}\\
-Bucket sort er nesten helt lik tellesortering, men bruker såkalte “bøtter” man putter tallene i. Trikset er at man lager "bøtter", eller tallintervaller, i listen i stedet for bare enkelttall. For eksempel [3,4) betyr at verdier større eller lik 3, men mindre enn 4 skal i bøtten. Når man har lagt alle tallene som skal sorteres inn i de tilhørende bøttene, sorterer man innholdet i hver bøtte etter en kjent og kjær sammenligningssortering, f.eks. insertion sort, og kombinerer det sorterte innholdet i bøttene til slutt.
+\subsubsection{Bucketsort}
+Bucketsort er nesten helt lik tellesortering, men bruker såkalte “bøtter” man putter tallene i. Trikset er at man lager "bøtter", eller tallintervaller, i listen i stedet for bare enkelttall. For eksempel [3,4) betyr at verdier større eller lik 3, men mindre enn 4 skal i bøtten. Når man har lagt alle tallene som skal sorteres inn i de tilhørende bøttene, sorterer man innholdet i hver bøtte etter en kjent og kjær sammenligningssortering, f.eks. insertion sort, og kombinerer det sorterte innholdet i bøttene til slutt.
 \\\\
 Forventet kjøretid for bøttesortering er $\theta(n)$. For å oppnå denne kjøretiden er tallene som sorteres nødt til å være uniformt fordelt (slik at det vil havne omtrent like mange tall i hver bøtte). I tillegg må antallet bøtter være omtrent like stort som antallet elementer som skal sorteres, for å unngå at for mange elementer må sorteres med sammenligningssorteringen.
 
@@ -357,10 +357,10 @@ Når dette så skal setter sammen til en sortert tallfølge hentes tallene opp f
 Tallfølgen blir da til slutt 3,9, 21, 25, 29, 37, 43, 49.
 \end{boxed}
 
-\noindent \textbf{Selection sort}\\
+\subsubsection{Selection sort}
 %FYLL INN HER
 
-\noindent \textbf{Topologisk sortering}\\
+\subsubsection{Topologisk sortering}
 %FYLL INN HER
 Topologisk sortering bruker en DAG til å finne en rekkefølge gjennom alle elementene i grafen. Det tillates ikke sykler. Man begynner i noden som ikke har noen kanter inn til seg.
 
